test/Fail/Issue7944.err
Issue7944.agda:8.10-11: error: [VariableIsErased]
Variable A is declared erased, so it cannot be used here
when checking that the expression A has type Set
